--- a/info.html
+++ b/info.html
@@ -1,6 +1,6 @@
 <html>
 <head>
- 
+ <title>Zerde.cz</title>
   <link type="text/css" rel="stylesheet" href="galleria/themes/classic/galleria.classic.css">
 
 </head>
@@ -16,7 +16,7 @@
   <br>
   <h1><center>Zuzana Denková</center></h1>
   <p>email : zuzadenkerova@seznam.cz</p>
-  <p>tel : 789217491</p>
+  <p>tel : #########</p>
   <br>
 </div>
 
