--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <title>Zerde.cz</title>
+  
+  <link href='https://fonts.googleapis.com/css?family=Niconne' rel='stylesheet'>
   <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
