--- a/info.html
+++ b/info.html
@@ -2,6 +2,7 @@
 <head>
  <title>Zerde.cz</title>
   <link type="text/css" rel="stylesheet" href="galleria/themes/classic/galleria.classic.css">
+ <link href='https://fonts.googleapis.com/css?family=Niconne' rel='stylesheet'>
 
 </head>
 <body>
