--- a/index.html
+++ b/index.html
@@ -26,10 +26,31 @@
 </div>
 <center>
 <div class="galleria" >
-  <img src="obrazky/1.jpg" data-title="Nadpis" data-description="popuis">
-  <img src="obrazky/2.jpg" data-title="Nadpis" data-description="popuis">
-  <img src="obrazky/3.jpg" data-title="Nadpis" data-description="popuis">
-  <p>fukc</p>
+<img src="obrazky\hodiny poledne.jpg" data-title="hodiny poledne" >
+<img src="obrazky\hodiny ráno.jpg" data-title="hodiny ráno" >
+<img src="obrazky\hodiny večer.jpg" data-title="hodiny večer" >
+<img src="obrazky\IMG_7902.JPG" data-title="IMG_7902" >
+<img src="obrazky\IMG_7903.JPG" data-title="IMG_7903" >
+<img src="obrazky\IMG_7904.JPG" data-title="IMG_7904" >
+<img src="obrazky\IMG_7905.JPG" data-title="IMG_7905" >
+<img src="obrazky\IMG_7906.JPG" data-title="IMG_7906" >
+<img src="obrazky\IMG_7907.JPG" data-title="IMG_7907" >
+<img src="obrazky\IMG_7908.JPG" data-title="IMG_7908" >
+<img src="obrazky\IMG_7909.JPG" data-title="IMG_7909" >
+<img src="obrazky\IMG_7910.JPG" data-title="IMG_7910" >
+<img src="obrazky\IMG_7911.JPG" data-title="IMG_7911" >
+<img src="obrazky\IMG_7912.JPG" data-title="IMG_7912" >
+<img src="obrazky\IMG_7913.JPG" data-title="IMG_7913" >
+<img src="obrazky\IMG_7914.JPG" data-title="IMG_7914" >
+<img src="obrazky\IMG_7915.JPG" data-title="IMG_7915" >
+<img src="obrazky\IMG_7916.JPG" data-title="IMG_7916" >
+<img src="obrazky\růže 003.jpg" data-title="růže 003" >
+<img src="obrazky\růže 004.jpg" data-title="růže 004" >
+<img src="obrazky\růže 005.jpg" data-title="růže 005" >
+<img src="obrazky\růže 006.jpg" data-title="růže 006" >
+<img src="obrazky\růže 007.jpg" data-title="růže 007" >
+<img src="obrazky\růže 008.jpg" data-title="růže 008" >
+<img src="obrazky\růže 012.jpg" data-title="růže 012" >
 </div>
 </center>
 </body>
