Updated phone number

--- a/info.html
+++ b/info.html
@@ -17,7 +17,7 @@
   <br>
   <h1><center>Zuzana Denková</center></h1>
   <p>email : zuzadenkerova@seznam.cz</p>
-  <p>tel : #########</p>
+  <p>tel : 585 391 012</p>
   <br>
 </div>
 
