--- a/index.html
+++ b/index.html
@@ -26,62 +26,63 @@
 </div>
 <center>
 <div class="galleria" >
-  <img src="obrazky\Advent 16.jpg" data-title="Advent 16" >
-  <img src="obrazky\cesta ke světlu.jpg" data-title="cesta ke světlu" >
-  <img src="obrazky\cestou, necestou.JPG" data-title="cestou, necestou" >
-  <img src="obrazky\Dana.JPG" data-title="Dana" >
-  <img src="obrazky\detail.jpg" data-title="detail" >
-  <img src="obrazky\jaro (2).jpg" data-title="jaro (2)" >
-  <img src="obrazky\jaro.JPG" data-title="jaro" >
-  <img src="obrazky\jednorožec3.JPG" data-title="jednorožec3" >
-  <img src="obrazky\jídlo.jpg" data-title="jídlo" >
-  <img src="obrazky\kdo volá 1.jpg" data-title="kdo volá 1" >
-  <img src="obrazky\koupání.jpg" data-title="koupání" >
-  <img src="obrazky\kočka.jpg" data-title="kočka" >
-  <img src="obrazky\krematorium (2).JPG" data-title="krematorium (2)" >
-  <img src="obrazky\krematorium.JPG" data-title="krematorium" >
-  <img src="obrazky\lilie.jpg" data-title="lilie" >
-  <img src="obrazky\léčitel.jpg" data-title="léčitel" >
-  <img src="obrazky\malí bytostní.jpg" data-title="malí bytostní" >
-  <img src="obrazky\matka.jpg" data-title="matka" >
-  <img src="obrazky\modlitba.jpg" data-title="modlitba" >
-  <img src="obrazky\nahoru.jpg" data-title="nahoru" >
-  <img src="obrazky\o život.jpg" data-title="o život" >
-  <img src="obrazky\obraz.JPG" data-title="obraz" >
-  <img src="obrazky\orel.JPG" data-title="orel" >
-  <img src="obrazky\osada.JPG" data-title="osada" >
-  <img src="obrazky\ostrov 025.jpg" data-title="ostrov 025" >
-  <img src="obrazky\ostrovy.jpg" data-title="ostrovy" >
-  <img src="obrazky\pejsku.jpg" data-title="pejsku" >
-  <img src="obrazky\pomoc.jpg" data-title="pomoc" >
-  <img src="obrazky\povodeň na Inu.jpg" data-title="povodeň na Inu" >
-  <img src="obrazky\počátek.jpg" data-title="počátek" >
-  <img src="obrazky\pálava.jpg" data-title="pálava" >
-  <img src="obrazky\příroda.jpg" data-title="příroda" >
-  <img src="obrazky\rozchod.jpg" data-title="rozchod" >
-  <img src="obrazky\růže 003.jpg" data-title="růže 003" >
-  <img src="obrazky\růže 004.jpg" data-title="růže 004" >
-  <img src="obrazky\růže 005.jpg" data-title="růže 005" >
-  <img src="obrazky\růže 006.jpg" data-title="růže 006" >
-  <img src="obrazky\růže 007.jpg" data-title="růže 007" >
-  <img src="obrazky\růže 008.jpg" data-title="růže 008" >
-  <img src="obrazky\růže 012.jpg" data-title="růže 012" >
-  <img src="obrazky\růžový jednorožec.JPG" data-title="růžový jednorožec" >
-  <img src="obrazky\sedmikráska.JPG" data-title="sedmikráska" >
-  <img src="obrazky\Silvestr.jpg" data-title="Silvestr" >
-  <img src="obrazky\smrt 005.jpg" data-title="smrt 005" >
-  <img src="obrazky\soužití ohně s vodou.jpg" data-title="soužití ohně s vodou" >
-  <img src="obrazky\sova2.JPG" data-title="sova2" >
-  <img src="obrazky\Svatojánská noc.jpg" data-title="Svatojánská noc" >
-  <img src="obrazky\svědomí (2).jpg" data-title="svědomí (2)" >
-  <img src="obrazky\učitel 2009.jpg" data-title="učitel 2009" >
-  <img src="obrazky\v noci.jpg" data-title="v noci" >
-  <img src="obrazky\ve dvou.jpg" data-title="ve dvou" >
-  <img src="obrazky\vesmír 2000.jpg" data-title="vesmír 2000" >
-  <img src="obrazky\září 13.JPG" data-title="září 13" >
-  <img src="obrazky\zářící hvězda.jpg" data-title="zářící hvězda" >
-  <img src="obrazky\úplněk.jpg" data-title="úplněk" >
-  <img src="obrazky\čmelák.jpg" data-title="čmelák" >
+<img src="obrazky\Advent 16.jpg" data-title="Advent 16" >
+<img src="obrazky\cesta ke světlu.jpg" data-title="cesta ke světlu" >
+<img src="obrazky\cestou necestou.jpg" data-title="cestou necestou" >
+<img src="obrazky\Dana.jpg" data-title="Dana" >
+<img src="obrazky\detail.jpg" data-title="detail" >
+<img src="obrazky\jaro 2.jpg" data-title="jaro 2" >
+<img src="obrazky\jaro.jpg" data-title="jaro" >
+<img src="obrazky\jednorožec3.jpg" data-title="jednorožec3" >
+<img src="obrazky\jídlo.jpg" data-title="jídlo" >
+<img src="obrazky\kdo volá 1.jpg" data-title="kdo volá 1" >
+<img src="obrazky\koupání.jpg" data-title="koupání" >
+<img src="obrazky\kočka.jpg" data-title="kočka" >
+<img src="obrazky\krematorium 2.jpg" data-title="krematorium 2" >
+<img src="obrazky\krematorium.jpg" data-title="krematorium" >
+<img src="obrazky\lilie.jpg" data-title="lilie" >
+<img src="obrazky\léčitel.jpg" data-title="léčitel" >
+<img src="obrazky\malí bytostní.jpg" data-title="malí bytostní" >
+<img src="obrazky\matka.jpg" data-title="matka" >
+<img src="obrazky\melák.jpg" data-title="melák" >
+<img src="obrazky\modlitba.jpg" data-title="modlitba" >
+<img src="obrazky\nahoru.jpg" data-title="nahoru" >
+<img src="obrazky\o život.jpg" data-title="o život" >
+<img src="obrazky\obraz.jpg" data-title="obraz" >
+<img src="obrazky\orel.jpg" data-title="orel" >
+<img src="obrazky\osada.jpg" data-title="osada" >
+<img src="obrazky\ostrov 025.jpg" data-title="ostrov 025" >
+<img src="obrazky\ostrovy.jpg" data-title="ostrovy" >
+<img src="obrazky\pejsku.jpg" data-title="pejsku" >
+<img src="obrazky\plněk.jpg" data-title="plněk" >
+<img src="obrazky\pomoc.jpg" data-title="pomoc" >
+<img src="obrazky\povodeň na Inu.jpg" data-title="povodeň na Inu" >
+<img src="obrazky\počátek.jpg" data-title="počátek" >
+<img src="obrazky\pálava.jpg" data-title="pálava" >
+<img src="obrazky\příroda.jpg" data-title="příroda" >
+<img src="obrazky\rozchod.jpg" data-title="rozchod" >
+<img src="obrazky\růže 003.jpg" data-title="růže 003" >
+<img src="obrazky\růže 004.jpg" data-title="růže 004" >
+<img src="obrazky\růže 005.jpg" data-title="růže 005" >
+<img src="obrazky\růže 006.jpg" data-title="růže 006" >
+<img src="obrazky\růže 007.jpg" data-title="růže 007" >
+<img src="obrazky\růže 008.jpg" data-title="růže 008" >
+<img src="obrazky\růže 012.jpg" data-title="růže 012" >
+<img src="obrazky\růžový jednorožec.jpg" data-title="růžový jednorožec" >
+<img src="obrazky\sedmikráska.jpg" data-title="sedmikráska" >
+<img src="obrazky\Silvestr.jpg" data-title="Silvestr" >
+<img src="obrazky\smrt 005.jpg" data-title="smrt 005" >
+<img src="obrazky\soužití ohně s vodou.jpg" data-title="soužití ohně s vodou" >
+<img src="obrazky\sova2.jpg" data-title="sova2" >
+<img src="obrazky\Svatojánská noc.jpg" data-title="Svatojánská noc" >
+<img src="obrazky\svědomí 2.jpg" data-title="svědomí 2" >
+<img src="obrazky\učitel 2009.jpg" data-title="učitel 2009" >
+<img src="obrazky\v noci.jpg" data-title="v noci" >
+<img src="obrazky\ve dvou.jpg" data-title="ve dvou" >
+<img src="obrazky\vesmír 2000.jpg" data-title="vesmír 2000" >
+<img src="obrazky\září 13.jpg" data-title="září 13" >
+<img src="obrazky\zářící hvězda.jpg" data-title="zářící hvězda" >
+
   
 </div>
 </center>
