--- a/info.html
+++ b/info.html
@@ -12,7 +12,7 @@
 
 </div>
 
-<div class="info">
+<div class="info" style="color:#ffffff">
   <br>
   <br>
   <h1><center>Zuzana Denková</center></h1>
