--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link type="text/css" rel="stylesheet" href="galleria/themes/classic/galleria.classic.css">
 
 </head>
-<body>
+<body id="index">
 <div class="header">
   <a href="index.html">Zerde</a>
   <div class="buttonBox">
