--- a/info.html
+++ b/info.html
@@ -1,6 +1,9 @@
 <html>
 <head>
  <title>Zerde.cz</title>
+ <meta name="description" content="Kontakt na malířku Zuzanu Denkovou">
+ <meta name"keywords" content="obrazy,malby,malíř,Zuzana,Denková,prodej obrazů,galerie,portfolio,obrázky,koupit,telefon,email,kontakt,informace,info">
+ 
   <link type="text/css" rel="stylesheet" href="galleria/themes/classic/galleria.classic.css">
  <link href='https://fonts.googleapis.com/css?family=Niconne' rel='stylesheet'>
 
