Added loading message
Should get removed when gallery is fully loaded

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link type="text/css" rel="stylesheet" href="galleria/themes/classic/galleria.classic.css">
 
 </head>
+  
 <body id="index">
 <div class="header">
   <a href="index.html">Zerde</a>
@@ -27,6 +28,7 @@
   </div>
 </div>
 <center>
+<p id="loading">Obrazy se načítají. Počkejte chvíli.</p>
 <div class="galleria" >
 
 
