--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 </div>
 <center>
-<p id="loading">Obrazy se stahují. Vydržte chvíli.</p>
+<p id="loading">Obrazy se nahrávají. Vydržte chvíli.</p>
 <div class="galleria" >
 
 
