--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <title>Zerde.cz</title>
+  <title>Zerde.cz - Zuzana Denková</title>
   <meta name="description" content="Galerie obrazů malířky Zuzany Denkové">
-  <meta name"keywords" content="obrazy,malby,malíř,Zuzana,Denková,prodej obrazů,galerie,portfolio,obrázky,koupit">
+  <meta name="keywords" content="obrazy,malby,malíř,Zuzana,Denková,prodej obrazů,galerie,portfolio,obrázky,koupit">
   
   <link href='https://fonts.googleapis.com/css?family=Niconne' rel='stylesheet'>
   <script
